# fourth_sem_course_project

./: CMakeLists.txt  README.md  main.cpp  program_balance.txt  program_id.txt  program_name.txt
allocators/: CMakeLists.txt
allocators/allocator_boundary_tags/: CMakeLists.txt
allocators/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocators/allocator_buddies_system/: CMakeLists.txt
allocators/allocator_buddies_system/include/: allocator_buddies_system.h
allocators/allocator_global_heap/: CMakeLists.txt
allocators/allocator_global_heap/include/: allocator_global_heap.h
allocators/allocator_sorted_list/: CMakeLists.txt
allocators/allocator_sorted_list/include/: allocator_sorted_list.h
associative_container/include/: associative_container.h
associative_container/search_tree/: CMakeLists.txt
associative_container/search_tree/include/: search_tree.h
associative_container/search_tree/indexing_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
chain_of_responsibility/: handler.h
command/: command.h
containers/: CMakeLists.txt
containers/collection/: collection.h
containers/container/: container.h
containers/customer/: customer.h
containers/database/: database.h
containers/pool/: pool.h
containers/scheme/: scheme.h
dialog/: dialog.h
editions/validation/: validation.h
handler/: handler.h
logger/: CMakeLists.txt
logger/client_logger/: CMakeLists.txt
logger/client_logger/include/: client_logger_builder.h
logger/logger/: Makefile  cmake_install.cmake
(+1 files in other folders)
